[gd_scene load_steps=30 format=3 uid="uid://dx5na7ufncxg3"]

[ext_resource type="Material" uid="uid://bisbatw7pxu6r" path="res://assets/debug/pixel_perfect_styling/smooth-pixel.tres" id="1_7xwuo"]
[ext_resource type="Script" uid="uid://b0i8j6op07e6t" path="res://modules/entities/enemies/shades/complex_shade/complex_shade.gd" id="2_knfav"]
[ext_resource type="Texture2D" uid="uid://d4ml0vjhqwsbo" path="res://modules/entities/enemies/shades/ShadeWIP_64x64.png" id="3_g1pll"]
[ext_resource type="Script" uid="uid://cagepw2wjjl3j" path="res://addons/xsm/state.gd" id="4_e4b7j"]
[ext_resource type="PackedScene" uid="uid://6tybdjnr6y0c" path="res://modules/entities/enemies/soft_collisions/soft_collision.tscn" id="4_kcpdx"]
[ext_resource type="Script" uid="uid://bx6jvvpiqokkf" path="res://modules/entities/enemies/shades/complex_shade/xsm/patrol.gd" id="6_2ptfn"]
[ext_resource type="Script" uid="uid://cxnxkuahbhhlb" path="res://modules/entities/enemies/shades/complex_shade/movement.gd" id="6_twtcd"]
[ext_resource type="Script" uid="uid://bfvba1oo0iob7" path="res://modules/entities/enemies/shades/complex_shade/xsm/chase.gd" id="7_8fy0v"]
[ext_resource type="Script" uid="uid://d07o421syyh25" path="res://modules/entities/enemies/shades/complex_shade/xsm/attack.gd" id="8_pitir"]
[ext_resource type="Script" uid="uid://dftanwwuon216" path="res://modules/entities/enemies/shades/complex_shade/xsm/stunned.gd" id="9_6lwy3"]
[ext_resource type="Script" uid="uid://cxiitcbiwanvf" path="res://modules/entities/enemies/shades/complex_shade/wait_near_player.gd" id="9_e3xrx"]
[ext_resource type="Script" uid="uid://ct6vby56i820l" path="res://addons/basecomponents/Components/health_component.gd" id="10_5ojq5"]
[ext_resource type="Script" uid="uid://cggi1jq1vgh8q" path="res://modules/entities/enemies/shades/complex_shade/xsm/dead.gd" id="10_m6rex"]
[ext_resource type="Script" uid="uid://b1svtud75bya4" path="res://addons/basecomponents/Components/2D/hurtbox_component_2d.gd" id="11_mqmca"]
[ext_resource type="Script" uid="uid://dc7k3kwq0lbts" path="res://addons/basecomponents/Components/2D/hitbox_component_2d.gd" id="12_rteho"]

[sub_resource type="Gradient" id="Gradient_ih2li"]
offsets = PackedFloat32Array(0, 0.431487)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ia2jp"]
gradient = SubResource("Gradient_ih2li")
width = 48
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_36sd6"]
radius = 36.0

[sub_resource type="Curve" id="Curve_x568u"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.479661), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_00tmr"]
colors = PackedColorArray(1, 1, 1, 1, 2, 2, 2, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_56qhg"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xa74g"]
size = Vector2(24, 39)

[sub_resource type="CircleShape2D" id="CircleShape2D_54508"]
radius = 16.0

[sub_resource type="Animation" id="Animation_0nojc"]
resource_name = "Melee"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6qj3b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_741tg"]
resource_name = "Stunned"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBoxComponent2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_4xl6e"]
resource_name = "die"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1um1b"]
_data = {
&"Melee": SubResource("Animation_0nojc"),
&"RESET": SubResource("Animation_6qj3b"),
&"Stunned": SubResource("Animation_741tg"),
&"die": SubResource("Animation_4xl6e")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lei1k"]
radius = 12.0

[node name="ComplexShade" type="CharacterBody2D" groups=["enemy", "saved_data", "tetherable_body"]]
z_index = 1
y_sort_enabled = true
texture_filter = 2
material = ExtResource("1_7xwuo")
collision_layer = 8
collision_mask = 87
motion_mode = 1
script = ExtResource("2_knfav")

[node name="Shadow" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_ia2jp")

[node name="AgroRegion" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AgroRegion"]
polygon = PackedVector2Array(72, 0, 70, -19, 63, -36, 51, -51, 37, -62, 18, -70, 0, -8, 0, 10, 19, 70, 36, 63, 51, 51, 63, 36, 70, 19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRegion"]
shape = SubResource("CircleShape2D_36sd6")
debug_color = Color(0, 0.760784, 0.886275, 0)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(0, -12)
amount = 10
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 10.0
particle_flag_align_y = true
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, -5)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
angle_max = 270.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_x568u")
color = Color(0.214103, 0.214103, 0.214103, 1)
color_ramp = SubResource("Gradient_00tmr")
hue_variation_min = -0.51
hue_variation_max = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_g1pll")
offset = Vector2(0, -21)
region_rect = Rect2(21, 14, 22, 40)

[node name="SoftCollision" parent="." instance=ExtResource("4_kcpdx")]
unique_name_in_owner = true
position = Vector2(0, -6)

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_56qhg")

[node name="ShadeFSM" type="Node" parent="."]
script = ExtResource("4_e4b7j")
history_size = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("Alive/Movement/Patrol_Idle")

[node name="Alive" type="Node" parent="ShadeFSM"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../StateAnimation")

[node name="Movement" type="Node" parent="ShadeFSM/Alive" node_paths=PackedStringArray("nav_agent", "soft_collision")]
editor_description = "The enemy has a location to move towards, whether that be the player or a patrol path."
script = ExtResource("6_twtcd")
nav_agent = NodePath("../../../NavAgent")
soft_collision = NodePath("../../../SoftCollision")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("..")

[node name="Patrol_Idle" type="Node" parent="ShadeFSM/Alive/Movement" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("6_2ptfn")
nav_agent = NodePath("../../../../NavAgent")
state_speed = null
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="Chase" type="Node" parent="ShadeFSM/Alive/Movement"]
script = ExtResource("7_8fy0v")
state_speed = null
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="Evade" type="Node" parent="ShadeFSM/Alive/Movement"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../ReturnToPost")

[node name="ReturnToPost" type="Node" parent="ShadeFSM/Alive/Movement"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../WaitNearPlayer")

[node name="WaitNearPlayer" type="Node" parent="ShadeFSM/Alive/Movement"]
editor_description = "This state is for enemies that aren't allowed to engage yet."
script = ExtResource("9_e3xrx")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Combat" type="Node" parent="ShadeFSM/Alive"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Attack" type="Node" parent="ShadeFSM/Alive/Combat"]
script = ExtResource("8_pitir")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "Melee"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Movement/Chase")

[node name="Reaction" type="Node" parent="ShadeFSM/Alive"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Stunned" type="Node" parent="ShadeFSM/Alive/Reaction"]
script = ExtResource("9_6lwy3")
sample = null
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "Stunned"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../../Movement/Patrol_Idle")

[node name="Surprised" type="Node" parent="ShadeFSM/Alive/Reaction"]
script = ExtResource("4_e4b7j")
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="Dead" type="Node" parent="ShadeFSM"]
script = ExtResource("10_m6rex")
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "die"
loop_mode = 0
on_finished = 0
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_5ojq5")
max_health = 20

[node name="HurtBoxComponent2D" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 8
collision_mask = 4
script = ExtResource("11_mqmca")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent2D"]
position = Vector2(0, -19.5)
shape = SubResource("RectangleShape2D_xa74g")

[node name="HitBoxComponent2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("12_rteho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent2D"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_54508")
disabled = true
debug_color = Color(1, 0, 1, 0.262745)

[node name="NavAgent" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
debug_use_custom = true
debug_path_custom_color = Color(0.788235, 0, 0.517647, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1um1b")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(0, -12)
emitting = false
amount = 30
one_shot = true
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(10, 20)
particle_flag_align_y = true
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, -5)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_x568u")
color = Color(0.227451, 0, 0, 1)
color_ramp = SubResource("Gradient_00tmr")
hue_variation_max = 0.4

[node name="TetherableArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TetherableArea2D"]
shape = SubResource("CircleShape2D_lei1k")

[connection signal="body_exited" from="AgroRegion" to="." method="_on_agro_region_body_exited"]
[connection signal="Died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="Hit" from="HurtBoxComponent2D" to="." method="_on_hurt_box_component_2d_hit"]
[connection signal="mouse_entered" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="TetherableArea2D" to="." method="_on_tetherable_area_2d_mouse_exited"]
